fix: font size too big

--- a/protos/web/index.css
+++ b/protos/web/index.css
@@ -57,6 +57,7 @@ input[type="text"] {
 
 body {
     padding: 10px;
+    font-size: 12px;
 }
 
 .rotate {
